JumpScript/tests/baselines/reference/generatorTypeCheck32.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck32.jump(2,29): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck32.jump (1 errors) ====
    var s: string;
    var f: () => number = () => yield s;
                                ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.